--- a/environment.yml
+++ b/environment.yml
@@ -4,17 +4,15 @@ channels:
 - conda-forge
 dependencies:
 - python=3.10
-- ipython
 - jupyter
-- jupyterlab>=3
 - numpy
 - pandas>=1
 - matplotlib>3
-- mplleaflet
-- ipympl
 - seaborn
 - pyproj
 - requests
 - openpyxl
 - plotly>5.3
-- geopy>=2.3
+- pip
+- pip:
+  - geopy > 2
